trang quản lý nhân viên

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@
   padding: 6px;
   text-decoration: none;
   transition: background-color 0.2s ease;
-  color: #0077b6; /* Default text color */
+  color: white; /* Default text color */
   border-radius: 5px;
   font-size: 18px;
   height: 50px;
