--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,11 +3,11 @@
   margin-block: 20px;
   display: flex;
   align-items: center;
-  gap: 8px; /* Space between icon and text */
+  gap: 8px;
   padding: 6px;
   text-decoration: none;
   transition: background-color 0.2s ease;
-  color: white; /* Default text color */
+  color: white;
   border-radius: 5px;
   font-size: 18px;
   height: 50px;
@@ -15,11 +15,11 @@
 }
 
 .navlink:hover {
-  background-color: #0077b6; /* Light gray-blue color for hover */
-  color: whitesmoke; /* Soft light purple on hover */
+  background-color: #0077b6;
+  color: whitesmoke;
 }
 
 .active-navlink {
-  background-color: #0096c7; /* Dark teal background when active */
-  color: white; /* Soft blue text color when active */
+  background-color: #0096c7;
+  color: white;
 }
